--- a/client/package.json
+++ b/client/package.json
@@ -30,5 +30,8 @@
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
+  },
+  "dependencies": {
+    "react-router-dom": "^6.3.0"
   }
 }
