--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
 		"express-jwt": "^6.1.0",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^6.0.12",
-		"morgan": "^1.10.0"
+		"morgan": "^1.10.0",
+		"multer": "^1.4.5-lts.1"
 	}
 }
