--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "web-vitals": "^2.1.4"
   },
   "dependencies": {
+    "@splinetool/react-spline": "^2.2.1",
     "react-router-dom": "^6.3.0"
   }
 }
