--- a/client/package.json
+++ b/client/package.json
@@ -33,8 +33,12 @@
   },
   "dependencies": {
     "@splinetool/react-spline": "^2.2.1",
+    "@web3uikit/core": "^0.1.3",
     "axios": "^0.27.2",
-    "react-router-dom": "^6.3.0"
+    "moralis": "^1.10.1",
+    "react-moralis": "^1.4.0",
+    "react-router-dom": "^6.3.0",
+    "web3uikit": "^1.0.2"
   },
   "proxy": "http://localhost:8000/"
 }
