--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,7 @@
     "@web3uikit/core": "^0.1.3",
     "axios": "^0.27.2",
     "moralis": "^1.10.1",
+    "query-string": "^7.1.1",
     "react-moralis": "^1.4.0",
     "react-router-dom": "^6.3.0",
     "web3uikit": "^1.0.2"
