--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "homepage": "https://github.com/Spyware007/FlipVerse#readme",
   "dependencies": {
-    "concurrently": "^7.3.0"
+    "@web3uikit/core": "^0.1.3",
+    "concurrently": "^7.3.0",
+    "web3uikit": "^1.0.2"
   }
 }
