--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -16,6 +16,18 @@
         "projectManagement",
         "maintenance"
       ]
+    },
+    {
+      "login": "Nishant-Bhosale",
+      "name": "Nishant Bhosale",
+      "avatar_url": "https://avatars.githubusercontent.com/u/77777251?v=4",
+      "profile": "https://nishant-bhosale.netlify.app/",
+      "contributions": [
+        "code",
+        "ideas",
+        "projectManagement",
+        "maintenance"
+      ]
     }
   ],
   "contributorsPerLine": 7,
