--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -28,6 +28,18 @@
         "projectManagement",
         "maintenance"
       ]
+    },
+    {
+      "login": "SaurabhBarde-007",
+      "name": "Saurabh Barde",
+      "avatar_url": "https://avatars.githubusercontent.com/u/89410132?v=4",
+      "profile": "https://github.com/SaurabhBarde-007",
+      "contributions": [
+        "content",
+        "design",
+        "ideas",
+        "review"
+      ]
     }
   ],
   "contributorsPerLine": 7,
